test/Fail/Issue291b.err
Issue291b.agda:14.5-7: error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Is empty: u ≡ runit (Issue291b.♯-0 u) (stuck)
      [ at Issue291b.agda:14.5-7 ]
